[package]
name = "leptos-auth-axum-surreal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.4"  
bcrypt = { version = "0.15.0" }

# Leptos dependencies
leptos = { git = "https://github.com/leptos-rs/leptos.git", branch = "leptos_0.8", features = ["nightly"] }
leptos_router = {  git = "https://github.com/leptos-rs/leptos.git", branch = "leptos_0.8", features = ["nightly"] }
axum = { version = "0.8.1", optional = true, features = ["macros"]}
console_error_panic_hook = { version = "0.1", optional = true}
leptos_axum = { git = "https://github.com/leptos-rs/leptos.git", branch = "leptos_0.8", optional = true }
leptos_meta = {git = "https://github.com/leptos-rs/leptos.git", branch = "leptos_0.8" }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
wasm-bindgen = { version = "=0.2.99", optional = true }

# Auth / Surreal dependencies
surrealdb = { version = "2.1.4", features = ["kv-mem"], optional = true }
anyhow = { version = "1.0.71", optional = true }
async-trait = {version = "0.1.71", optional = true }
serde = { version = "1.0.167", features = ["derive"] }
axum_session_surreal = { version = "0.4.0", optional = true }
axum_session_auth = { version = "0.16.0", optional = true }
axum_session = { version = "0.16.0", optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:async-trait",
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "dep:surrealdb",
    "dep:anyhow",
    "dep:axum_session_surreal",
    "dep:axum_session_auth",
    "dep:axum_session",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
output-name = "leptos-auth-axum-surreal"

# The site root folder is where cargo-leptos generate all output. WARNING: all content of this folder will be erased on a rebuild. Use it in your server setup.
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
# Defaults to pkg
site-pkg-dir = "pkg"

# [Optional] The source CSS file. If it ends with .sass or .scss then it will be compiled by dart-sass into CSS. The CSS is optimized by Lightning CSS before being written to <site-root>/<site-pkg>/app.css
style-file = "style/main.scss"
# Assets source dir. All files found here will be copied and synchronized to site-root.
# The assets-dir cannot have a sub directory with the same name/path as site-pkg-dir.
#
# Optional. Env: LEPTOS_ASSETS_DIR.
assets-dir = "public"

# The IP and port (ex: 127.0.0.1:3000) where the server serves the content. Use it in your server setup.
site-addr = "127.0.0.1:3000"

# The port to use for automatic reload monitoring
reload-port = 3001

# [Optional] Command to use when running end2end tests. It will run in the end2end dir.
#   [Windows] for non-WSL use "npx.cmd playwright test"
#   This binary name can be checked in Powershell with Get-Command npx
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

#  The browserlist query used for optimizing the CSS.
browserquery = "defaults"

# The environment Leptos will run in, usually either "DEV" or "PROD"
env = "DEV"

# The features to use when compiling the bin target
#
# Optional. Can be over-ridden with the command line parameter --bin-features
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
#
# Optional. Defaults to false.
bin-default-features = false

# The features to use when compiling the lib target
#
# Optional. Can be over-ridden with the command line parameter --lib-features
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
#
# Optional. Defaults to false.
lib-default-features = false

# The profile to use for the lib target when compiling for release
#
# Optional. Defaults to "release".
lib-profile-release = "wasm-release"
